fixed spacing issues for mobile devices on the notes list and detail page

--- a/src/styles/NoteItem.module.css
+++ b/src/styles/NoteItem.module.css
@@ -22,7 +22,7 @@
 
 .Private {
     position: fixed;
-    right: 10%;
+    right: 3%;
 }
 
 .Link > div {
@@ -55,23 +55,26 @@
 }
 
 .Text {
-    font-size: 120%;
+    font-size: 100%;
     text-align: center;
     contain: content;
 }
 
 .TextDetail {
-    font-size: 120%;
+    font-size: 100%;
     text-align: left;
 }
 
-@media  screen and (min-width: 413px) {
+@media  screen and (min-width: 768px) {
 
     .ImageDetailPage {
-        height: auto;
-        width: 95%;
+        /* height: auto;
+        width: 50%; */
         margin-bottom: 10%;
         object-fit: contain;
+        margin-bottom: 10%;
+        width: 100%;
+        height: 1450px;
     
     }
 }
